--- a/index.Rmd
+++ b/index.Rmd
@@ -8,7 +8,7 @@ output:
 
 <br>
 
-<h1 style="text-align: center;" markdown="1">Wine Rating - What's behind great wines?</h1>
+<h1 style="text-align: center;" markdown="1">What's behind great wines?</h1>
 
 <br>
 
